--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    ":enableRenovate",
-    "local>andersonentwistle/renovate",
-    ":enablePreCommit"
+    "github>aentwist/renovate//presets/default",
+    "github>aentwist/renovate//presets/pre-commit/internal/default"
   ]
 }
