chore: automerge renovate dep updates w/o pipeline

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -2,6 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>aentwist/renovate//presets/default",
-    "github>aentwist/renovate//presets/pre-commit/internal/default"
+    "github>aentwist/renovate//presets/pre-commit/internal/default",
+    ":skipStatusChecks"
   ]
 }
