feat: add a custom manager for pre-commit `additional_dependencies`
Change the behavior from requiring manual action for additional
dependencies to automatically handling them.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,5 +12,7 @@ repos:
       - id: commitlint
         stages: [commit-msg]
         additional_dependencies:
+          # renovate: datasource=npm
           - commitlint@19.0.3
+          # renovate: datasource=npm
           - "@commitlint/config-conventional@19.0.3"
