--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,8 +11,12 @@ repos:
     hooks:
       - id: commitlint
         stages: [commit-msg]
-        additional_dependencies:
+        additional_dependencies: &commitlint-additional-dependencies
+          #
           # renovate: datasource=npm
           - commitlint@19.0.3
           # renovate: datasource=npm
           - "@commitlint/config-conventional@19.0.3"
+      - id: commitlint-all
+        stages: [manual]
+        additional_dependencies: *commitlint-additional-dependencies
