chore: do not skip pipeline
There is a pipeline now, so there is no need to ignore status checks.

--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -4,7 +4,6 @@
     "github>aentwist/renovate//presets/default",
     "github>aentwist/renovate//presets/pre-commit/internal/default",
     "github>aentwist/renovate//presets/pre-commit/internal/prettier",
-    "github>aentwist/renovate//presets/pre-commit/internal/commitlint",
-    ":skipStatusChecks"
+    "github>aentwist/renovate//presets/pre-commit/internal/commitlint"
   ]
 }
